--- a/HomeManager/View/Personen/ucEmailVerzenden.xaml
+++ b/HomeManager/View/Personen/ucEmailVerzenden.xaml
@@ -2,12 +2,12 @@
     x:Class="HomeManager.View.Personen.ucEmailVerzenden"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Behaviors="clr-namespace:HomeManager.Behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:Behaviors="clr-namespace:HomeManager.Behaviors"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
-    d:DesignHeight="570"
+    d:DesignHeight="650"
     d:DesignWidth="600"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
@@ -52,11 +52,11 @@
             CornerRadius="5">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="150" />
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="200" />
-                    <ColumnDefinition Width="175" />
+                    <ColumnDefinition Width="150" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="35" />
@@ -64,19 +64,9 @@
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="120" />
                     <RowDefinition Height="35" />
                 </Grid.RowDefinitions>
-
-                <!--<ComboBox
-                    x:Name="cboPersoon"
-                    Grid.Row="0"
-                    Grid.Column="3"
-                    Margin="5"
-                    ItemsSource="{Binding MijnVerzenderEmailAdres}"
-                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay}"
-                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem, Mode=TwoWay}"
-                    SelectedValuePath="PersoonID" />-->
                 <TextBlock
                     x:Name="Afzender"
                     Grid.Row="0"
@@ -136,23 +126,6 @@
                     Margin="5"
                     Text="{Binding Bericht, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
-                <TextBox
-                    x:Name="tbBijlage"
-                    Grid.Row="5"
-                    Grid.Column="3"
-                    Height="50"
-                    Margin="5"
-                    VerticalAlignment="Center"
-                    Text="{Binding BijlagePad, Mode=OneWay}" />
-
-                <Button
-                    x:Name="btnKiesBijlage"
-                    Grid.Row="5"
-                    Grid.Column="2"
-                    Margin="5"
-                    Padding="5"
-                    Command="{Binding KiesBijlageCommand}"
-                    Content="Kies Bijlage" />
 
 
                 <Button
@@ -161,15 +134,15 @@
                     Grid.Column="3"
                     Margin="5"
                     Padding="5"
-                    Content="Submit"
-                    Command="{Binding SubmitCommand}" />
+                    Command="{Binding SubmitCommand}"
+                    Content="Submit" />
 
 
 
                 <ListBox
                     x:Name="ListViewBijlage"
-                    Grid.Row="4"
-                    Grid.Column="4"
+                    Grid.Row="5"
+                    Grid.Column="3"
                     Width="200"
                     Margin="5"
                     HorizontalAlignment="Left"
@@ -182,32 +155,31 @@
                 </ListBox>
 
                 <StackPanel
-     Grid.Row="4"
-     Grid.RowSpan="2"
-     Grid.Column="5"
-     Grid.ColumnSpan="5"
-     Margin="15,0,0,150"
-     HorizontalAlignment="Left"
-     Orientation="Vertical">
+                    Grid.Row="5"
+                    Grid.RowSpan="3"
+                    Grid.Column="2"
+                    Margin="15,0,5,0"
+                    HorizontalAlignment="Left"
+                    Orientation="Vertical">
 
-     <Button
-         Margin="5"
-         Command="{Binding cmdUploadBijlage}"
-         CommandParameter="{Binding}"
-         Style="{StaticResource UploadPersoonButton}" />
-     <Button
-         Margin="5"
-         Command="{Binding cmdShowBijlage}"
-         CommandParameter="{Binding}"
-         Style="{StaticResource Showfile}" />
-     <Button
-         Margin="5"
-         Command="{Binding cmdDeleteBijlage}"
-         CommandParameter="{Binding}"
-         Style="{StaticResource Deletefile}" />
+                    <Button
+                        Margin="5"
+                        Command="{Binding cmdUploadBijlage}"
+                        CommandParameter="{Binding}"
+                        Style="{StaticResource UploadPersoonButton}" />
+                    <Button
+                        Margin="5"
+                        Command="{Binding cmdShowBijlage}"
+                        CommandParameter="{Binding}"
+                        Style="{StaticResource Showfile}" />
+                    <Button
+                        Margin="5"
+                        Command="{Binding cmdDeleteBijlage}"
+                        CommandParameter="{Binding}"
+                        Style="{StaticResource Deletefile}" />
 
 
- </StackPanel>
+                </StackPanel>
             </Grid>
         </Border>
     </Grid>
