--- a/HomeManager/View/Personen/ucTelefoonType.xaml
+++ b/HomeManager/View/Personen/ucTelefoonType.xaml
@@ -51,7 +51,7 @@
             CornerRadius="5">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="120" />
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="100" />
