--- a/HomeManager/View/Personen/ucLand.xaml
+++ b/HomeManager/View/Personen/ucLand.xaml
@@ -53,7 +53,7 @@
             CornerRadius="5">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="120" />
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="150" />
@@ -229,8 +229,8 @@
                 </StackPanel>
                 <Button
                     Grid.Row="4"
-                    Grid.Column="4"
-                    Margin="0,9,39,10"
+                    Grid.Column="3"
+                    Margin="50,0,0,0"
                     Command="{Binding cmdUploadPicture}"
                     Style="{StaticResource UploadVlagButton}" />
             </Grid>
