--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -10,9 +10,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     x:Name="MainWIN"
     Title="Home Manager"
-    Width="1000"
+    Width="1250"
     Height="900"
     Background="{StaticResource myTitleBar}"
+    LocationChanged="MainWindow_LocationChanged"
+    SizeChanged="Window_SizeChanged"
     mc:Ignorable="d">
     <Window.DataContext>
         <VM:clsHomeVM />
@@ -49,9 +51,6 @@
         </DataTemplate>
         <DataTemplate DataType="{x:Type VM:clsTelefoonNummersViewModel}">
             <V:ucTelefoonNummers />
-        </DataTemplate>
-        <DataTemplate DataType="{x:Type VM:clsNotitiesViewModel}">
-            <V:ucNotities />
         </DataTemplate>
 
         <DataTemplate DataType="{x:Type VM:clsDagboekViewModel}">
@@ -291,17 +290,20 @@
                         </StackPanel>
                     </Expander>
 
-                    <Expander IsExpanded="{Binding IsStickyNotesExpanderMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource myHamburgerStickyNotes}">
-                        <StackPanel x:Name="stckStickynotes">
+                    <Expander Style="{StaticResource myHamburgerStickyNotes}">
+                        <Button
+                            Click="Show_StickyNotes"
+                            Content="Toon Venster"
+                            Style="{StaticResource myMenuStickyNoteColor}" />
+
+                        <!-- Colors zijn niet gevraagd
+                        <Expander IsExpanded="{Binding IsStickyNotesExpanderMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource myHamburgerStickyNotes}"><StackPanel x:Name="stckStickynotes">
                             <Button Content="Sticky notes colors" Style="{StaticResource myMenuStickyNoteColor}" />
                         </StackPanel>
+                        -->
 
                     </Expander>
-
                 </StackPanel>
-
-
-
 
                 <Button
                     Grid.Row="2"
@@ -328,6 +330,5 @@
             Grid.Row="1"
             Grid.Column="1"
             Content="{Binding CurrentViewModel}" />
-
     </Grid>
 </Window>
